...
                        .padding(4.dp, 2.dp)
                        .fillMaxHeight(),
                    verticalAlignment = Alignment.CenterVertically
                ) {
                    Text(
                        longTimeFromUnixTimestamp(ts = SessionModel.currentTimestamp),
                        modifier=Modifier.testTag("active time"),
                        color = colorScheme.onPrimary,
                        style = TextStyle(fontWeight = FontWeight.W600)
                    )
                }
                Row(
                    Modifier
...
        fun trailCorrect() = trailAmount.toDoubleOrNull() != null && trailAmount.toDouble() > 0

        fun sendLimitOrder() {
            if (bepCorrect() && sepCorrect() && multiCorrect()) {
                SessionModel.Command.addLimitOrderToSession(
                    Order(
                        bep = bep.toDouble(),
                        sep = sep.toDouble(),
                        multi = multiInt.value.toDouble(),
                        trail = if (trailingEnabled && trailCorrect()) trailAmount.toDouble() else 0.0
                    )
                )
                CoroutineScope(Dispatchers.IO).launch { SessionModel.saveSession() }
            }
...
            ) {
                Text("Trailing stop")
                Spacer(Modifier.width(8.dp))
                Switch(
                    checked = trailingEnabled,
                    onCheckedChange = { trailingEnabled = it },
                    modifier = Modifier.testTag("trailing stop"))
                Spacer(Modifier.width(8.dp))
                TextField(
                    value = trailAmount,
                    onValueChange = { trailAmount = it },
                    label = { Text("Trail value") },
                    keyboardOptions = KeyboardOptions(
...
                        onDone = { keyboardController?.hide() }),
                    singleLine = true,
                    placeholder = { Text("Follows price by this amount") },
                    modifier = Modifier
                        .weight(1f)
                        .fillMaxHeight()
                        .testTag("trail value"),
                    isError = !trailCorrect() && trailingEnabled,
                    enabled = trailingEnabled
                )
            }
            Spacer(Modifier.height(8.dp))
            Row(Modifier.height(IntrinsicSize.Max)) {
                OutlinedButton(
                    shape = RoundShapes.medium,
                    onClick = { sendLimitOrder() },
                    modifier = Modifier
                        .fillMaxHeight()
                        .weight(1f)
                        .testTag("limit"),
                    enabled = bepCorrect() && sepCorrect() && multiCorrect() && (!trailingEnabled || trailCorrect())
                ) {
                    Text("Limit @ $bep", textAlign = TextAlign.Center)
                }
                Spacer(Modifier.width(8.dp))
                OutlinedButton(
                    shape = RoundShapes.medium,
                    onClick = { sendMarketOrder() },
                    modifier = Modifier
                        .fillMaxHeight()
                        .weight(1f)
                        .testTag("market"),
                    enabled = sepCorrect() && multiCorrect() && (!trailingEnabled || trailCorrect())
                ) {
                    Text(
                        "Market @ ${SessionModel.currentMarketBuyPrice}",
                        textAlign = TextAlign.Center
                    )
...
                    }
                }
                Slider(
                    value = multi,
                    onValueChange = { multi = it },
                    valueRange = -maxMultiplier.toFloat()..+maxMultiplier.toFloat(),
                    modifier = Modifier.padding(10.dp, 0.dp).testTag("sessionMultiSliderTag"),
                    steps = ((maxMultiplier - 1) * 2) + 1 // i don't understand why do I have to subtract one from maxMultiplier
                )
            }
        }
    }

...
