...
                    Text("Trailing price: ${o.trail}$")
                }
            }
            Spacer(Modifier.weight(1f))
            Column(horizontalAlignment = Alignment.End) {
                if (o.cancelled) {
                    Text("Cancelled", color = colorScheme.error, modifier = Modifier.testTag("cancelled"))
                } else {
                    if (o.opened()) {
                        if (o.closed()) {
                            Text("Closed at ${shortTimeFromUnixTimestamp(ts = o.closeTS)}", modifier = Modifier.testTag("closed"))
                        } else {
                            Text("Opened", color = colorScheme.primary, modifier = Modifier.testTag("opened"))
                        }
                    } else {
                        Text("Not yet opened", modifier = Modifier.testTag("not yet opened"))
                    }
                }
                Spacer(Modifier.height(8.dp))
                if (!o.cancelled && !o.closed()) {
                    if (o.opened()) {
                        if (marketClose != null) Button(
                            modifier = Modifier.testTag("market close"),
                            onClick = { marketClose(o.id) }
                        ) {
                            Text(
                                "Market close"
                            )
                        }
                    } else if (cancelOrder != null) Button(
                        modifier = Modifier.testTag("cancel"),
                        onClick = { cancelOrder(o.id) }
                    ) {
                        Text("Cancel")
                    }
                }
            }
...
