...
        ) {
            Text("Date", style = AppTypography.headlineLarge)
            Spacer(Modifier.height(16.dp))
            Row {
                OutlinedButton(
                    shape = RoundShapes.medium,
                    modifier = Modifier.weight(1f).testTag("first date"),
                    onClick = {
                        startOrEndDate = true
                        makeDatePickerDialog(context).show()
                    }) {
                    Column(horizontalAlignment = Alignment.CenterHorizontally) {
                        Text(text = "Start date")
...
                        )
                    }
                }
            }
            Spacer(Modifier.height(8.dp))
            OutlinedButton(
                modifier = Modifier.fillMaxWidth().testTag("randomize"),
                shape = RoundShapes.medium,
                onClick = { randomizeDate() }) {
                Text("Randomize Date", textAlign = TextAlign.Center)
            }
            Spacer(Modifier.height(32.dp))

            Text("Time", style = AppTypography.headlineLarge)

            Spacer(Modifier.height(16.dp))
            Row {
                OutlinedButton(
                    shape = RoundShapes.medium,
                    modifier = Modifier.weight(1f).testTag("start time"),
                    onClick = {
                        startOrEndDate = true
                        makeTimePickerDialog(context).show()
                    }) {
                    Column(horizontalAlignment = Alignment.CenterHorizontally) {
                        Text(text = "Start time")
...
                        )
                    }
                }
            }
            Spacer(Modifier.height(8.dp))
            Row(verticalAlignment = Alignment.CenterVertically) {
                Checkbox(modifier=Modifier.testTag("plus one hour") ,checked = addOneHour, onCheckedChange = { addOneHour = it })
                Text(
                    "Start from T+1h (Have price history at start)",
                    modifier = Modifier.clickable { addOneHour = !addOneHour })
            }
            Spacer(Modifier.height(24.dp))
            when {
                loading -> {
                    Text("Checking availability...")
                }
                timespanAvailable -> {
                    Text("The specified timespan is fully available")
                }
                else -> Text("The specified timespan is not available.", Modifier.testTag("not available"))
            }
            Spacer(Modifier.height(16.dp))
            Button(
                enabled = !loading && timespanAvailable,
                modifier = Modifier.fillMaxWidth().semantics { testTag = "create button tag" },
                onClick = {
                    coroutineScope.launch {
                        loading = true
                        val (sessionID, successful) = RealtimeDBRepo.createSession(
                            startTSUnix().floorDiv(1000),
                            endTSUnix().floorDiv(1000),
...
